--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 		<title>Map</title>
         
         <link href="css/map.css" rel="stylesheet">
-        <link href="css/jquery-ui.css" rel="stylesheet">
 
-		<script type="text/javascript" src="js/rhill-voronoi-core.min.js"></script>
+        <script type="text/javascript" src="js/rhill-voronoi-core.min.js"></script>
         <script type="text/javascript" src="js/paper.js"></script>
         <script type="text/javascript" src="js/Simplex.js"></script>
         <script type="text/javascript" src="js/FastBlur.js"></script>
         <script type="text/javascript" src="js/helper.js"></script>        
-        <script type="text/javascript" src="js/Map.js"></script>
+        <script type="text/javascript" src="js/Island.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
 	</head>
 
