--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <script type="text/javascript" src="js/rhill-voronoi-core.min.js"></script>
         <script type="text/javascript" src="js/paper.js"></script>
         <script type="text/javascript" src="js/Simplex.js"></script>
-        <script type="text/javascript" src="js/FastBlur.js"></script>
-        <script type="text/javascript" src="js/helper.js"></script>        
+        <script type="text/javascript" src="js/perlin.js"></script>
         <script type="text/javascript" src="js/Island.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
 	</head>
@@ -18,7 +17,7 @@
 	<body>        
         <noscript>You need to enable Javascript in your browser for this page to display properly.</noscript>
 
-        <canvas id="voronoiCanvas" resize="true"></canvas>
+        <canvas id="island" resize="true"></canvas>
         <canvas id="perlin" width="256" height="256" hidden="true"></canvas>
 	</body>
 </html>
