Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Island.js : Island map generator in JavaScript" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Island.js by lebesnec</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Island.js</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Island.js</h1>
+        <p>Island map generator in JavaScript</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lebesnec/island.js">View on GitHub</a>
+        <p class="view"><a href="https://github.com/lebesnec/island.js">View the Project on GitHub <small>lebesnec/island.js</small></a></p>
 
-          <h1 id="project_title">Island.js</h1>
-          <h2 id="project_tagline">Island map generator in JavaScript</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/lebesnec/island.js/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/lebesnec/island.js/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/lebesnec/island.js/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/lebesnec/island.js/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/lebesnec/island.js">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h3>
 <a name="islandjs" class="anchor" href="#islandjs"><span class="octicon octicon-link"></span></a>island.js.</h3>
 
@@ -38,19 +35,21 @@
 
 <p>Inspired by <a href="http://www-cs-students.stanford.edu/%7Eamitp/game-programming/polygon-map-generation/">http://www-cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/</a></p>
 
-<p><img src="https://lh3.googleusercontent.com/-8gAZ9IRT9JQ/U0VmNGsxBII/AAAAAAAAeCM/Vqq1wIEShvw/s800/island.jpg" alt="example of generated island"></p>
-      </section>
-    </div>
+<p>Rendering with 50000 polygons and 250 rivers :
+<img src="https://lh6.googleusercontent.com/-yCoR7YwRDl8/U0z-YgMLlPI/AAAAAAAAeHE/B3ifCidHoFs/s800/Sans%2520titre2.jpg" alt="example of generated island"><img src="https://lh5.googleusercontent.com/-CuDWhc6AdZU/U0z-YpcKYNI/AAAAAAAAeHA/d5MhfItKg8g/s800/Sans%2520titre3.jpg" alt="example of generated island"></p>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Island.js maintained by <a href="https://github.com/lebesnec">lebesnec</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+<p>With 10000 polygons :
+<img src="https://lh4.googleusercontent.com/-mECJxTv_Fy8/U0z-apA9juI/AAAAAAAAeHQ/9nnYftBzsNg/s800/Sans%2520titre4.jpg" alt="example of generated island"></p>
+
+<p>"square" rendering :
+<img src="https://lh3.googleusercontent.com/-7--_ofrPmOQ/U0z-YmFkbRI/AAAAAAAAeHI/ihuAj9lpy5w/s800/Sans%2520titre.jpg" alt="example of generated island"></p>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/lebesnec">lebesnec</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
