Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Island.js by lebesnec</title>
+    <title>island.js by lebesnec</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Island.js</h1>
+        <h1>island.js</h1>
         <p>Island map generator in JavaScript</p>
 
         <p class="view"><a href="https://github.com/lebesnec/island.js">View the Project on GitHub <small>lebesnec/island.js</small></a></p>
@@ -28,20 +28,21 @@
         </ul>
       </header>
       <section>
-        <h3>
-<a name="islandjs" class="anchor" href="#islandjs"><span class="octicon octicon-link"></span></a>island.js.</h3>
+        <h1>
+<a name="islandjs" class="anchor" href="#islandjs"><span class="octicon octicon-link"></span></a>island.js</h1>
 
-<p>Island map generator in JavaScript.</p>
+<p>Island map generator in JavaScript
+<a href="http://lebesnec.github.io/island.js">http://lebesnec.github.io/island.js</a></p>
 
 <p>Inspired by <a href="http://www-cs-students.stanford.edu/%7Eamitp/game-programming/polygon-map-generation/">http://www-cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/</a></p>
 
 <p>Rendering with 50000 polygons and 250 rivers :
 <img src="https://lh6.googleusercontent.com/-yCoR7YwRDl8/U0z-YgMLlPI/AAAAAAAAeHE/B3ifCidHoFs/s800/Sans%2520titre2.jpg" alt="example of generated island"><img src="https://lh5.googleusercontent.com/-CuDWhc6AdZU/U0z-YpcKYNI/AAAAAAAAeHA/d5MhfItKg8g/s800/Sans%2520titre3.jpg" alt="example of generated island"></p>
 
-<p>With 10000 polygons :
-<img src="https://lh4.googleusercontent.com/-mECJxTv_Fy8/U0z-apA9juI/AAAAAAAAeHQ/9nnYftBzsNg/s800/Sans%2520titre4.jpg" alt="example of generated island"></p>
+<p>With 10000 polygons, shading off :
+<img src="https://lh4.googleusercontent.com/-DM2rSu2o-XA/U00qgcjdX-I/AAAAAAAAeHk/9I-ip4UzcJ0/s800/Sans%2520titre.jpg" alt="example of generated island"></p>
 
-<p>"square" rendering :
+<p>Rendering using a "square" graph :
 <img src="https://lh3.googleusercontent.com/-7--_ofrPmOQ/U0z-YmFkbRI/AAAAAAAAeHI/ihuAj9lpy5w/s800/Sans%2520titre.jpg" alt="example of generated island"></p>
       </section>
       <footer>
