perlin canvas size is a config now

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<body>
         <canvas id="island" resize="true"></canvas>
-        <canvas id="perlin" width="256" height="256" hidden="true"></canvas>
+        <canvas id="perlin" hidden="true"></canvas>
         
         <script type="application/javascript">
             paper.install(window);
